Update address & github

--- a/resume.html
+++ b/resume.html
@@ -172,7 +172,7 @@
           <section class="projects">
             <header>
               <h3>Side Projects</h3>
-              <a href="https://gitlab.andrewsoutar.com/">gitlab.andrewsoutar.com</a>
+              <a href="https://github.com/andrewsoutar">github.com/andrewsoutar</a>
             </header>
             <section>
               <header>Hello-Metal</header>
@@ -250,9 +250,8 @@
       </section>
       <footer>
         <div class="address">
-          <span>Box S-1883</span><!--
-       --><span>1 Castle Point Terrace</span><!--
-       --><span>Hoboken, NJ 07030</span><!--
+          <span>2 Hickory Dr.</span><!--
+       --><span>Morris Plains, NJ 07950</span><!--
      --></div><!--
      --><span class="citizen"></span>
       </footer>
