--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,7 @@
         <option value="resume.css">resume.css</option>
         <option value="resume2.css">resume2.css</option>
         <option value="resume3.css">resume3.css</option>
+        <option value="resume4.css">resume4.css</option>
       </select>
       <script type="text/javascript" src="resume.js"></script>
     </nav>
